mysql id&password info remove

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -24,8 +24,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springstudy?serverTimezone=Asia/Seoul
-    username: root
-    password: ljh4284416
+    username: test  
+    password: test
 
   mvc:
     view:
